--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "babel-preset-es2015": "^6.24.0",
     "autoprefixer": "^6.4.1",
     "bootstrap-sass": "^3.3.7",
+    "bootstrap-datetime-picker": "^2.4.4",
     "compass-mixins": "^0.12.10",
     "font-awesome": "^4.6.3",
     "blueimp-file-upload": "^9.18.0"
